--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "googleapis": "^150.0.1",
     "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
