--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
+# Node modules and build output
 node_modules
 .next
+out
+
+# Environment variables and sensitive files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 credentials.json
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor/IDE files
+.vscode/
+.idea/
+*.swp
+
+# Test coverage
+coverage/
+
+# Optional: lock files (if you want to ignore them)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
